--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 
+
+#Data source 
+#Indica el driver/lib para conectar java a mysql
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#Url donde esta el servicio de tu mysql y el nombre de la base de datos
+spring.datasource.url=jdbc:mysql://remotemysql.com:3306/6FD9qVFd4m
+
+#Usuario y contrasena para tu base de datos descrita en la linea anterior
+spring.datasource.username=6FD9qVFd4m
+spring.datasource.password=SbNywVVjzJ
+
+#[opcional]Imprime en tu consola las instrucciones hechas en tu base de datos.
+#spring.jpa.show-sql = true
