--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Url donde esta el servicio de tu mysql y el nombre de la base de datos
-spring.datasource.url=jdbc:mysql://remotemysql.com:3306/6FD9qVFd4m
+spring.datasource.url=jdbc:mysql://remotemysql.com:3306/FvtSdhvyMr
 
 #Usuario y contrasena para tu base de datos descrita en la linea anterior
-spring.datasource.username=6FD9qVFd4m
-spring.datasource.password=SbNywVVjzJ
+spring.datasource.username=FvtSdhvyMr
+spring.datasource.password=4nIpaI6ImC
