--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.url=jdbc:mysql://remotemysql.com:3306/FvtSdhvyMr
 #Usuario y contrasena para tu base de datos descrita en la linea anterior
 spring.datasource.username=FvtSdhvyMr
 spring.datasource.password=4nIpaI6ImC
+
+logging.level.org.hibernate.SQL=debug
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
