--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Url donde esta el servicio de tu mysql y el nombre de la base de datos
-spring.datasource.url=jdbc:mysql://remotemysql.com:3306/FvtSdhvyMr
+spring.datasource.url=jdbc:mysql://b58llc7hh5dx1lmghcex-mysql.services.clever-cloud.com/b58llc7hh5dx1lmghcex
 
 #Usuario y contrasena para tu base de datos descrita en la linea anterior
-spring.datasource.username=FvtSdhvyMr
-spring.datasource.password=4nIpaI6ImC
+spring.datasource.username=uab3hlq3w4eikkkj
+spring.datasource.password=ZxPjGR1lg9BVPdn4nSGF
