--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Url donde esta el servicio de tu mysql y el nombre de la base de datos
-spring.datasource.url=jdbc:mysql://remotemysql.com:3306/FvtSdhvyMr
+spring.datasource.url=jdbc:mysql://buhvoynzj4ia10nokegt-mysql.services.clever-cloud.com/buhvoynzj4ia10nokegt
 
 #Usuario y contrasena para tu base de datos descrita en la linea anterior
-spring.datasource.username=FvtSdhvyMr
-spring.datasource.password=4nIpaI6ImC
+spring.datasource.username=ufdj2gweogn0he0g
+spring.datasource.password=qP8WnZp8IrCTaBTH3LPq
