--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-hook-form": "^6.9.5",
+    "react-notifications": "^1.7.2",
     "react-notifications-component": "^3.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
